syntax = "proto3";

package com.road.yishi.proto.consortia;

message ConsortiaLinkReqMsg {
  int32 consortiaId = 1;
}
