syntax = "proto3";

package com.road.yishi.proto.consortia;

message TaskUpdateReqMsg {
  int32 payType = 1;
}
